cabal-version: >=1.8
name: puzzle-draw
version: 0.3.4.3
license: MIT
license-file: LICENSE
maintainer: rob@vllmrt.net
author: Robert Vollmert
synopsis: Creating graphics for pencil puzzles.
description:
    puzzle-draw is a library and tool for drawing pencil
    puzzles using Diagrams. It aims to provide a utility
    layer on top of Diagrams to help with drawing arbitrary
    puzzles, and to support several specific puzzles types
    In addition, it includes functionality for parsing
    puzzle data from a YAML file format.
category: Graphics
build-type: Simple
data-files:
    data/fonts/*.svg
extra-source-files:
    README.md
    CHANGES.md

source-repository head
    type: git
    location: http://github.com/robx/puzzle-draw.git

library
    exposed-modules:
        Data.Lib
        Data.Grid
        Data.GridShape
        Data.Util
        Data.Elements
        Data.Pyramid
        Data.Sudoku
        Data.Compose
        Data.Component
        Data.PuzzleTypes
        Data.Code
        Parse.Util
        Parse.Parsec
        Parse.Puzzle
        Parse.PuzzleTypes
        Parse.Code
        Parse.Component
        Draw.Generic
        Draw.Style
        Draw.GridShape
        Draw.Render
        Draw.Grid
        Draw.Font
        Draw.Lib
        Draw.Elements
        Draw.Widths
        Draw.Pyramid
        Draw.PuzzleGrids
        Draw.PuzzleTypes
        Draw.Draw
        Draw.Code
        Draw.CmdLine
        Draw.Component
    hs-source-dirs: src
    ghc-options: -Wall
    build-depends:
        base >=4.8 && <5,
        diagrams-lib >=1.4.2.3 && <1.5,
        parsec >=3.1,
        yaml >=0.8.4,
        aeson >=2.0,
        unordered-containers >=0.2,
        containers >=0.5,
        hashable >=1.2,
        bytestring >=0.10,
        text >=1.1,
        svg-builder >=0.1,
        SVGFonts >=1.7 && <1.8,
        vector-space >=0.8,
        mtl >=2.1,
        optparse-applicative >=0.13,
        filepath >=1.3,
        linear >=1.20.8,
        JuicyPixels,
        Rasterific >=0.7.4.2,
        diagrams-rasterific >=1.4.2,
        diagrams-svg >=1.4.2,
        file-embed >=0.0.10,
        data-default-class >=0.1.2

executable drawpuzzle
    main-is: drawpuzzle.hs
    hs-source-dirs: src/tools
    ghc-options: -Wall
    build-depends:
        base >=4.8 && <5,
        puzzle-draw -any,
        diagrams-lib >=1.4.2.3 && <1.5,
        yaml >=0.8.4,
        optparse-applicative >=0.12,
        aeson >=2.0,
        filepath >=1.3,
        bytestring >=0.10,
        diagrams-rasterific >=1.4.2,
        diagrams-svg >=1.4.2

executable checkpuzzle
    main-is: checkpuzzle.hs
    hs-source-dirs: src/tools
    ghc-options: -Wall
    build-depends:
        base >=4.8 && <5,
        puzzle-draw -any,
        yaml >=0.8.4,
        containers >=0.5,
        optparse-applicative >=0.12,
        aeson >=2.0,
        bytestring >=0.10,
        filepath >=1.3

executable servepuzzle
    main-is: Main.hs
    hs-source-dirs: src/serve
    ghc-options: -Wall
    build-depends:
        base >=4.2 && <5,
        bytestring >=0.9.1,
        mtl >=2,
        snap-core >=0.9,
        snap-server >=0.9,
        diagrams-lib >=1.2,
        aeson >=2.0,
        yaml >=0.8.4,
        filepath >=1.3,
        directory >=1.2,
        transformers >=0.3,
        safe >= 0.3,
        puzzle-draw -any

test-suite test
    type: exitcode-stdio-1.0
    main-is: tests.hs
    hs-source-dirs: tests
    other-modules:
        Data
        Util
        Data.GridSpec
        Data.GridShapeSpec
        Draw.GridSpec
        Draw.PuzzleTypesSpec
        Parse.PuzzleTypesSpec
        Parse.UtilSpec
    ghc-options: -Wall
    build-depends:
        base >=4.8 && <5,
        tasty >=0.8,
        tasty-hspec >=1.1.5,
        tasty-hunit >=0.8,
        hspec >=2.5.4,
        yaml >=0.8.4,
        text >=1.1,
        deepseq >=1.3,
        containers >=0.5,
        blaze-svg >=0.3,
        diagrams-lib >=1.4.2.3 && <1.5,
        bytestring >=0.10,
        puzzle-draw -any
